force-app/main/default/objects/Contact/fields/Club_Member__c.field-meta.xml
<CustomField>
    <fullName>Club_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only click for members associated with Saratoga RFC</description>
    <inlineHelpText>Only click for members associated with Saratoga RFC</inlineHelpText>
    <label>Club Member</label>
    <type>Checkbox</type>
</CustomField>