force-app/main/default/objects/Contact/fields/First_Year_At_Club__c.field-meta.xml
<CustomField>
    <fullName>First_Year_At_Club__c</fullName>
    <description>First year contact joined the club</description>
    <inlineHelpText>First year contact joined the club</inlineHelpText>
    <label>First Year At Club</label>
    <length>4</length>
    <type>Text</type>
</CustomField>