force-app/main/default/objects/Contact/fields/Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>Relation_Type__c</fullName>
    <description>The relation to the Club (current player, referee, etc)</description>
    <inlineHelpText>The relation to the Club (current player, referee, etc)</inlineHelpText>
    <label>Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Player</fullName>
            </value>
            <value>
                <fullName>Old Boy</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Friend of SRFC</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Referee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>