force-app/main/default/objects/Contact/fields/Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Shirt_Size__c</fullName>
    <description>Shirt Size, typically used for ordering club swag and shirts</description>
    <inlineHelpText>Shirt Size, typically used for ordering club swag and shirts</inlineHelpText>
    <label>Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shirt_Size</valueSetName>
    </valueSet>
</CustomField>