force-app/main/default/objects/Contact/listViews/Saratoga_RFC_Club_Members.listView-meta.xml
<ListView>
    <fullName>Saratoga_RFC_Club_Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Saratoga RFC Club Members</label>
</ListView>